tree-sitter-jot/test/corpus/basic_commands
=====
Inline Command
=====

abc: echo "This is no semicolon command"

---

(source_file
  (command_definition
    (command_name
      (identifier))
    (command_body
      (command))))

=====
Single Overline Command
=====

build:
  echo "Building the project...";

---

(source_file
  (command_definition
    (command_name
      (identifier))
    (command_body
      (command))))

=====
Multiple Overline Commands
=====

deploy:
  echo "Deploying the application..."
  echo "Deployment complete.";

---

(source_file
  (command_definition
    (command_name
      (identifier))
    (command_body
      (command)
      (command))))

=====
Referential Command
=====

build:
  echo "Building the project...";

refer:
  @build;

---


